# qt-litesolar

./: .gitignore  CMakeLists.txt  CrossCompile.cmake  LiteSolar.pro  Makefile  README.md  cmake-to-qmake.sh  linux-compile.sh  qt.code-workspace  win-compile-mingw.sh  win-compile.sh  规范.md
3rd/duktape/: Android.mk
3rd/freemodbus/: demo.cpp  freemodbus.pro
3rd/freemodbus/PortSerial/: port.h  porttimer.c
3rd/freemodbus/PortTcp/: port.h  porttcp.c
3rd/freemodbus/modbus/: mb.c
3rd/libmodbus/: modbus-version.h
3rd/libmodbus-3.0.6/doc/: modbus_connect.html  modbus_get_byte_from_bits.html  modbus_get_byte_timeout.html  modbus_get_float.html  modbus_get_header_length.html  modbus_get_response_timeout.html  modbus_mapping_free.html  modbus_mapping_new.html  modbus_new_rtu.html  modbus_new_tcp.html  modbus_new_tcp_pi.html  modbus_read_bits.html  modbus_read_input_registers.html  modbus_receive.html  modbus_receive_confirmation.html  modbus_reply_exception.html  modbus_set_bits_from_byte.html  modbus_set_bits_from_bytes.html  modbus_set_debug.html  modbus_set_float.html  modbus_set_response_timeout.html  modbus_set_slave.html  modbus_write_and_read_registers.html  modbus_write_bits.html  modbus_write_registers.html
abc/: abc.pro  main.c
core/: solar.h  solar_alarm.c  solar_alarm.h  solar_modbus_rtu.h  solar_rwlock.h  solar_stock.h  solar_template.h  solar_timer.h
dist-qt/: CMakeCache.txt  Makefile  cmake_install.cmake
dist-qt/LiteSolar_autogen/: moc_predefs.h  mocs_compilation.cpp
dist-qt/LiteSolar_autogen/ETVDZ3V6H3/: moc_dialogabout.cpp  moc_dialogdevicedata.cpp  moc_dialogdeviceevents.cpp  moc_dialogevents.cpp  moc_dialoghistoryline.cpp  moc_dialogsetting.cpp
dist-qt/LiteSolar_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_solar.cpp
dist-qt/LiteSolar_autogen/FBLH2IUA2P/: moc_notify.cpp  moc_notifymanager.cpp
dist-qt/LiteSolar_autogen/GULY2SVRVA/: moc_formdevice.cpp
dist-qt/LiteSolar_autogen/I5JQQ7UBLY/: moc_dialogtv.cpp
dist-qt/LiteSolar_autogen/include/: ui_dialogabout.h  ui_dialogdevicedata.h  ui_dialogdeviceevents.h  ui_dialogevents.h  ui_dialoghistoryline.h  ui_dialogsetting.h  ui_dialogtv.h  ui_formdevice.h  ui_mainwindow.h
doc/: architecture.drawio  架构图.vsd
example/: CMakeLists.txt
example/console/: .gitignore  CMakeLists.txt  main.c
example/win32/: CMakeLists.txt  MAKE.bat  main.c
lib/: CMakeLists.txt  lib.pro
lib/duktape/: CMakeLists.txt  duk_config.h  duktape.pro
lib/freemodbus-v1.5.0/: CMakeLists.txt
lib/freemodbus-v1.5.0/modbus/include/: mbconfig.h
lib/libmodbus/: CMakeLists.txt  libmodbus.pro
lib/lua-5.3.4/: CMakeLists.txt  lua-5.3.4.pro
lib/lua-5.3.4/luac/: CMakeLists.txt
lib/lua-5.3.4/luaexec/: CMakeLists.txt
lib/lua-5.3.4/src/: Z-Clean.bat
lib/lua-5.4.4/: CMakeLists.txt
lib/mqtt/: mqtt.pro  z.txt
lib/quazip/: quazip.pro
lib/quickjs/: CMakeLists.txt  qjscalc.c  repl.c
lib/quickjs/.obj/: cutils.o.d  quickjs.check.o.d
lib/snmp/: config.h  libsnmp.h  snmp.pro
lib/snmp/snmp_pp/: IPv6Utility.h  address.h  auth_priv.h
lib/sqlite-3.24.0/: CMakeLists.txt
lib/zlib/: zlib.pro
license/: License-MIT.txt
lualib-src/: compat.h  lua-modbus.c
make/: DLL_DUKTAPE.bat  DLL_LUA.bat  DLL_LUA.mk  MAKE
qt/: .gitignore  mainwindow.cpp  solar.qrc
qt/LiteSolar/: .gitignore  LiteSolar.pro  mainwindow.h  mainwindow.ui
qt/LiteSolar/menu/: colordefines.h  dialogdevicedata.cpp  dialogdevicedata.h  dialogdeviceevents.cpp  dialogevents.h  dialoghistoryline.ui  dialogsetting.ui
qt/LiteSolar/tv/: dialogtv.h  dialogtv.ui
qt/device/: formdevice.ui
qt/menu/: dialogdevicedata.ui  dialogevents.ui
qt/rc/: css.qss
src/: .gitignore  CMakeLists.txt
src-qt-ui/: CMakeLists.txt  QtJsRuntime.cpp  QtJsRuntime.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qss.qrc  solar.qrc
src-qt-ui/device/: formdevice.cpp  formdevice.h
src-qt-ui/js/: JsTestWindow.cpp  JsTestWindow.h  JsTestWindow.ui  QtJsRuntime.cpp  QtJsRuntime.h
src-qt-ui/main/classic/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src-qt-ui/main/modern/: appinit.cpp  appinit.h  main.cpp  uidemo08.cpp  uidemo08.h  uidemo08.ui
src-qt-ui/menu/: dialogabout.cpp  dialogdeviceevents.ui  dialogevents.cpp  dialoghistoryline.cpp  dialoghistoryline.h  dialogsetting.h
src-qt-ui/notify/: notify.h  notifymanager.cpp  notifymanager.h
src-qt-ui/rc/: config.xml
src-qt-ui/tv/: dialogtv.cpp
src-qt-ui/util/: iconhelper.cpp  iconhelper.h
src/3rd/libmodbus/: config.h
src/3rd/quickjs/: qjslib.bat
src/core/: CMakeLists.txt  solar_alarm.c  solar_device.c  solar_device.h  solar_log.c  solar_log.h  solar_station.c  solar_station.h
src/example/win32/: MAKE.bat  make
src/jscmodule/: CMakeLists.txt  js-cmodule.h  js-modbus-slave.c  js-test.c
src/jsruntime/: CMakeLists.txt  js-runtime.c  js-runtime.h  jsruntime.c  jsruntime.h
src/lualib-src/libmodbus/: lua-modbus.c
src/lualib/json4lua/: json.lua  rpc.lua  rpcserver.lua
src/make/: MAKE  MAKE.bat  MAKE.mk  README.md
src/qt/: LiteSolar.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/qt/menu/: dialogabout.ui  dialogdevicedata.cpp  dialogdevicedata.h  dialogdevicedata.ui  (+3 more)
src/test/: test_alarm.mk
test/: CMakeLists.txt  README.md  clean_all.bat  test.c  test_alarm.bat  test_alarm.c  test_alarm.mk
test-3rd/: CMakeLists.txt  test-3rd.pro
test-3rd/duktape/: MAKE  MAKE-SO-MODULE.bat  MAKE-SO.bat  MAKE.bat  MAKE.mk  hello.c  js.c  js_test.c  test.js  test_module.js
test-3rd/freemodbus/: CLEAN.bat  MAKE
test-3rd/libmodbus/: test.c
test-3rd/lua/: MAKE  MAKE.bat  MAKE.mk  main.lua  test.c  test.lua  test.mk  test_base.lua  test_coroutine.lua
test-3rd/sqlite3/: MAKE
test-3rd/test-duktape/: CMakeLists.txt  js_test.c  test-duktape.pro
test-3rd/test-libevent/: CMakeLists.txt  test.c
test-3rd/test-libmodbus/: CMakeLists.txt  MAKE  test-libmodbus.pro  test.c
test-3rd/test-lua/: CMakeLists.txt
test-3rd/test-quickjs/: CMakeLists.txt  test.c
test-3rd/test-sqlite3/: CMakeLists.txt  test-sqlite3.c
test-base/win32/: make  make.mk
ttt/: ttt.cpp  ttt.h  ttt.pro  ttt_global.h
(+60 files in other folders)
